# FermiOwn

./: .gitignore  Action.cpp  Action.h  Action_test.cpp  BasicAction.h  CMakeLists.txt  FermiOwn.cpp  FieldScalar.cpp  FieldScalar.h  FieldScalar_test.cpp  HMC.cpp  HMC.h  HMC_test.cpp  Integrator.cpp  Integrator.h  Integrator_test.cpp  Lattice.cpp  Lattice.h  Makefile  Metropolis.cpp  Metropolis.h  Metropolis_test.cpp  README.md  documentation.Doxyfile
apps/: CMakeLists.txt  ExactPartitionSum.cpp  FermiOwnGraph.cpp
reference-data/: magAbs.plt
src/: CMakeLists.txt
src/Actions/: Action.cpp  Action.h  BasicAction.h  BasicWeightFunction.h  BasicWeightFunctionTemplate.h  CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  ConfigPerPointGenerator.cpp  ConfigPerPointGenerator.h  ConfigPerPointGeneratorGN.cpp  ConfigPerPointGeneratorGN.h  ConfigPerPointGeneratorTh.cpp  ConfigPerPointGeneratorTh.h  DSlashUpdater.cpp  DSlashUpdater.h  MatrixChanges.cpp  MatrixChanges.h  SlacOperatorMatrix.cpp  SlacOperatorMatrix.cpp-old  SlacOperatorMatrix.h  SlacOperatorMatrix.h-old  ThirringWeightFunction.cpp  ThirringWeightFunction.h  WeightFunction.cpp  WeightFunction.h  WeightFunctionGrossNeveu.cpp  WeightFunctionGrossNeveu.h
src/Data/: BasicCloneKField.h  BasicKField.h  CMakeLists.txt  Constants.h  Field.cpp  Field.h  FieldBoolean.cpp  FieldBoolean.h  FieldBoolean_test.cpp  FieldScalar.cpp  FieldScalar.h  GrossNeveuKField.cpp  GrossNeveuKField.h  Lattice.cpp  ThirringKField.cpp  ThirringKField.h
src/Math/: CMakeLists.txt  CliffordAlgebra.h  Constants.h  WoodburyCGMatrix.cpp  WoodburyCGMatrix.h  WoodburyMatrix.cpp  WoodburyMatrix.h
src/UpdateAlgorithms/: CMakeLists.txt  FermiBoolMetropolis.cpp  FermiBoolMetropolis.h  HMC.cpp  HMC.h  Metropolis.cpp  Metropolis.h
src/UpdateAlgorithms/HMC_Support/: CMakeLists.txt  Integrator.cpp  Integrator.h
test/: Action_test.cpp  CMakeLists.txt  CliffordAlgebra_test.cpp  ConfigGenerator_test.cpp  DSlashUpdater_test.cpp  EigenBool_test.cpp  FieldBoolean_test.cpp  FieldScalar_test.cpp  Field_test.cpp  HMC_test.cpp  Integrator_test.cpp  Lattice_test.cpp  Metropolis_test.cpp  SlacOperatorMatrix_test.cpp  ThirringWeightFunction_test.cpp  WeightFunction_test.cpp  WoodburyMatrix_test.cpp  cmaketest.cpp
